@@ -1,5 +1,11 @@
 2008-01-03  Sam Steingold  <sds@gnu.org>
 
+	* spvw.d (size_arg): turn into a function from macro SIZE_ARG;
+	accept Tera and Peta on 64-bit platforms
+	(parse_options): fix limit_low argument to size_arg()
+
+2008-01-03  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in: pass "-o ./" to "clisp -c" uniformly
 	(MEMOPT): new variable: -m 2MW for compilation
 
